--- a/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
@@ -23,6 +23,7 @@
     <ui:param name="_lbGroupName"      value="#{bundle.Folders}"/>  
     <ui:param name="_CreateGroupLabel" value="#{bundle.CreateFolder}" />
     <ui:param name="_CreateItemLabel"  value="#{bundle.CreateDoc}" />
+    <ui:param name="_canUploadToFile"  value="#{true}"/>
     <ui:param name="_updates"          value="mainFRM:fileUploadFRM" />
     
     <!-- специфичные поля поиска -->
