--- a/escom-bpm-web/src/main/webapp/view/processes/monitor.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/monitor.xhtml
@@ -24,103 +24,104 @@
         <p:defaultCommand target="mainFRM:btnSearche" />
                 
         <p:panel toggleable="true" header="#{bundle.Filter}" toggleSpeed="500" >
-            <h:panelGrid columns="6" styleClass="without-spaces">
-                <p:panelGrid columns="1" styleClass="without-spaces">
-                    <p:outputLabel value="#{bundle.Initiator}:" />
-                    <ui:include src="/view/common/item-select-list-btn.xhtml" >
-                        <ui:param name="_itemValue" value="#{monitorBean.initiator}"/>
-                        <ui:param name="_itemLabel" value="nameEndElipse"/>
-                        <ui:param name="_required" value="#{false}"/>
-                        <ui:param name="_disabled" value="#{false}"/>
-                        <ui:param name="_converter" value="usersConvertor" />
-                        <ui:param name="_itemPanel" value="ownerPanel"/>
-                        <ui:param name="_titleItem" value="#{bundle.Initiator}"/>
-                        <ui:param name="_selectorBean" value="#{userBean}"/>
-                        <ui:param name="_items" value="#{userBean.findAll()}"/>
-                        <ui:param name="_actionClear" value="setInitiator"/>
-                        <ui:param name="_actionSelect" value="onChangeInitiator"/>
-                        <ui:param name="_update" value=""/>
-                    </ui:include>
-
-                    <p:outputLabel value="#{bundle.Curator}:" />
-                    <ui:include src="/view/common/item-select-list-btn.xhtml" >
-                        <ui:param name="_itemValue" value="#{monitorBean.curator}"/>
-                        <ui:param name="_itemLabel" value="nameEndElipse"/>
-                        <ui:param name="_required" value="#{false}"/>
-                        <ui:param name="_disabled" value="#{false}"/>
-                        <ui:param name="_converter" value="staffConvertor" />
-                        <ui:param name="_itemPanel" value="curatorPanel"/>
-                        <ui:param name="_titleItem" value="#{bundle.Curator}"/>
-                        <ui:param name="_selectorBean" value="#{staffBean}"/>
-                        <ui:param name="_items" value="#{staffBean.findAll()}"/>
-                        <ui:param name="_actionClear" value="setCurator"/>
-                        <ui:param name="_actionSelect" value="onChangeCurator"/>
-                        <ui:param name="_update" value=""/>
-                    </ui:include>
-                </p:panelGrid>
-
-                <p:panelGrid layout="grid" columns="1" columnClasses="ui-grid-col-12"  styleClass="without-spaces">
-                    <p:outputLabel value="#{bundle.TermExecution}:"/>
+            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">
+                <h:panelGrid columns="5" styleClass="without-spaces">
                     <h:panelGrid columns="2" styleClass="without-spaces">
-                        <h:outputLabel value="#{bundle.With}"/>                    
-                        <p:calendar value="#{monitorBean.dateStart}" id="dateStart"
-                                    widgetVar="dateCreateStartSearche"
-                                    showHour="true" showMinute="true" pages="3"
-                                    navigator="true" yearRange="c-10:c+20"
-                                    locale="#{sessionBean.locale}"
-                                    pattern="dd.MM.yyyy HH:mm:ss"
-                                    required="false"
-                                    requiredMessage="#{bundle.Field} [#{bundle.DateStart}  #{bundle.MustBeFilled}">
-                        </p:calendar>
+                        <p:outputLabel value="#{bundle.Initiator}:" />
+                        <ui:include src="/view/common/item-select-list-btn.xhtml" >
+                            <ui:param name="_itemValue" value="#{monitorBean.initiator}"/>
+                            <ui:param name="_itemLabel" value="nameEndElipse"/>
+                            <ui:param name="_required" value="#{false}"/>
+                            <ui:param name="_disabled" value="#{false}"/>
+                            <ui:param name="_converter" value="usersConvertor" />
+                            <ui:param name="_itemPanel" value="ownerPanel"/>
+                            <ui:param name="_titleItem" value="#{bundle.Initiator}"/>
+                            <ui:param name="_selectorBean" value="#{userBean}"/>
+                            <ui:param name="_items" value="#{userBean.findAll()}"/>
+                            <ui:param name="_actionClear" value="setInitiator"/>
+                            <ui:param name="_actionSelect" value="onChangeInitiator"/>
+                            <ui:param name="_update" value=""/>
+                        </ui:include>
 
-                        <h:outputLabel value="#{bundle.At}"/>
-                        <p:calendar value="#{monitorBean.dateEnd}" id="dateEnd"
-                                    widgetVar="dateCreateEndSearche"
-                                    navigator="true" yearRange="c-10:c+20"
-                                    showHour="true" showMinute="true" pages="3"
-                                    locale="#{sessionBean.locale}"
-                                    pattern="dd.MM.yyyy HH:mm:ss"
-                                    required="false"
-                                    requiredMessage="#{bundle.Field} #{bundle.DateEnd} #{bundle.MustBeFilled}">
-                        </p:calendar>
-                    </h:panelGrid>                                        
-                </p:panelGrid>
+                        <p:outputLabel value="#{bundle.Curator}:" />
+                        <ui:include src="/view/common/item-select-list-btn.xhtml" >
+                            <ui:param name="_itemValue" value="#{monitorBean.curator}"/>
+                            <ui:param name="_itemLabel" value="nameEndElipse"/>
+                            <ui:param name="_required" value="#{false}"/>
+                            <ui:param name="_disabled" value="#{false}"/>
+                            <ui:param name="_converter" value="staffConvertor" />
+                            <ui:param name="_itemPanel" value="curatorPanel"/>
+                            <ui:param name="_titleItem" value="#{bundle.Curator}"/>
+                            <ui:param name="_selectorBean" value="#{staffBean}"/>
+                            <ui:param name="_items" value="#{staffBean.findAll()}"/>
+                            <ui:param name="_actionClear" value="setCurator"/>
+                            <ui:param name="_actionSelect" value="onChangeCurator"/>
+                            <ui:param name="_update" value=""/>
+                        </ui:include>
+                        
+                        <p:outputLabel value="#{bundle.Number}:" />
+                        <h:panelGroup>
+                            <div class="ui-inputgroup">
+                                <p:inputText value="#{monitorBean.number}" widgetVar="srcNumber"/>
+                                <p:commandButton styleClass="btnClear" title="#{bundle.Clear}" icon="ui-icon-close" onclick="PF('srcNumber').jq.val('');"/>                        
+                            </div>
+                        </h:panelGroup>
+                    </h:panelGrid>
 
-                <h:panelGrid columns="1" styleClass="without-spaces">
-                    <p:outputLabel value="#{bundle.States}:" />
-                    <p:selectManyMenu value="#{monitorBean.states}" converter="stateConvertor" var="st" showCheckbox="true">
-                        <f:selectItems value="#{processBean.metadatesObj.statesList}" var="state" itemLabel="#{state.name}" itemValue="#{state}" />
-                        <p:column>
-                            <h:outputText value="#{monitorBean.getLabelFromBundle(st.name)}" />
-                        </p:column>
-                    </p:selectManyMenu>
-                </h:panelGrid>
+                    <p:panelGrid layout="grid" columns="1" columnClasses="ui-grid-col-12"  styleClass="without-spaces">
+                        <p:outputLabel value="#{bundle.TermExecution}:"/>
+                        <h:panelGrid columns="2" styleClass="without-spaces">
+                            <h:outputLabel value="#{bundle.With}"/>                    
+                            <p:calendar value="#{monitorBean.dateStart}" id="dateStart"
+                                        widgetVar="dateCreateStartSearche"
+                                        showHour="true" showMinute="true" pages="3"
+                                        navigator="true" yearRange="c-10:c+20"
+                                        locale="#{sessionBean.locale}"
+                                        pattern="dd.MM.yyyy HH:mm:ss"
+                                        required="false"
+                                        requiredMessage="#{bundle.Field} [#{bundle.DateStart}  #{bundle.MustBeFilled}">
+                            </p:calendar>
 
-                <h:panelGrid columns="1" rendered="#{!empty(monitorBean.allResults)}" styleClass="without-spaces">
-                    <p:outputLabel value="#{bundle.Result}:" />
-                    <p:selectManyMenu value="#{monitorBean.results}" var="item" showCheckbox="true">
-                        <f:selectItems value="#{monitorBean.allResults}" var="result" itemLabel="#{result}" itemValue="#{result}" />
-                        <p:column>
-                            <h:outputText value="#{monitorBean.getLabelFromBundle(item)}" />
-                        </p:column>
-                    </p:selectManyMenu>
-                </h:panelGrid>
-                
-                <h:panelGrid columns="1" styleClass="without-spaces">
-                    <p:outputLabel value="#{bundle.Number}:" />
-                    <h:panelGroup>
-                    <div class="ui-inputgroup">
-                        <p:inputText value="#{monitorBean.number}" widgetVar="srcNumber"/>
-                        <p:commandButton styleClass="btnClear" title="#{bundle.Clear}" icon="ui-icon-close" onclick="PF('srcNumber').jq.val('');"/>                        
-                    </div>
-                    </h:panelGroup>
-                </h:panelGrid>
-                
+                            <h:outputLabel value="#{bundle.At}"/>
+                            <p:calendar value="#{monitorBean.dateEnd}" id="dateEnd"
+                                        widgetVar="dateCreateEndSearche"
+                                        navigator="true" yearRange="c-10:c+20"
+                                        showHour="true" showMinute="true" pages="3"
+                                        locale="#{sessionBean.locale}"
+                                        pattern="dd.MM.yyyy HH:mm:ss"
+                                        required="false"
+                                        requiredMessage="#{bundle.Field} #{bundle.DateEnd} #{bundle.MustBeFilled}">
+                            </p:calendar>
+                        </h:panelGrid>                                        
+                    </p:panelGrid>
+
+                    <h:panelGrid columns="1" styleClass="without-spaces">
+                        <p:outputLabel value="#{bundle.States}:" />
+                        <p:selectManyMenu value="#{monitorBean.states}" converter="stateConvertor" var="st" showCheckbox="true">
+                            <f:selectItems value="#{processBean.metadatesObj.statesList}" var="state" itemLabel="#{state.name}" itemValue="#{state}" />
+                            <p:column>
+                                <h:outputText value="#{monitorBean.getLabelFromBundle(st.name)}" />
+                            </p:column>
+                        </p:selectManyMenu>
+                    </h:panelGrid>
+
+                    <h:panelGrid columns="1" rendered="#{!empty(monitorBean.allResults)}" styleClass="without-spaces">
+                        <p:outputLabel value="#{bundle.Result}:" />
+                        <p:selectManyMenu value="#{monitorBean.results}" var="item" showCheckbox="true">
+                            <f:selectItems value="#{monitorBean.allResults}" var="result" itemLabel="#{result}" itemValue="#{result}" />
+                            <p:column>
+                                <h:outputText value="#{monitorBean.getLabelFromBundle(item)}" />
+                            </p:column>
+                        </p:selectManyMenu>
+                    </h:panelGrid>
+
+                    <h:panelGrid columns="1" styleClass="without-spaces">                        
+                    </h:panelGrid>
+                </h:panelGrid>            
                 <p:commandButton icon="ui-icon-search" value="#{bundle.Find}"
-                         actionListener="#{monitorBean.onRefreshData()}">
+                             actionListener="#{monitorBean.onRefreshData()}">
                 </p:commandButton>
-                
-            </h:panelGrid>
+            </p:panelGrid>
         </p:panel>
 
         <p:treeTable id="monitorTable" value="#{monitorBean.root}" var="item" 
@@ -131,7 +132,7 @@
                      rowsPerPageTemplate="10,25,50" rows="10" 
                      currentPageReportTemplate="#{bundle.CountRecords}: {totalRecords}, #{bundle.Showing} {startRecord}-{endRecord}"                     
                      sortBy="#{item.planExecDate}" sortOrder="descending"
-                     rowStyleClass="#{sessionBean.isItemDelay(item) ? 'error-info' : null}"
+                     rowStyleClass="#{monitorBean.getItemStyle(item)}"
                      tableStyle="table-layout: auto; font-size: 90%;" styleClass="ui-grid-col-12 without-spaces">                
 
             <p:column width="20" sortBy="#{item.iconName}" >
@@ -148,9 +149,11 @@
             </p:column>
 
             <p:column headerText="#{bundle.Name}">
-                <p:commandLink value="#{item.nameEndElipse}" title="#{bundle.Open}"
-                               actionListener="#{monitorBean.setCurrentItem(item)}"
-                               oncomplete="document.getElementById('mainFRM:btnOpenItem').click();"/>
+                <h:outputLabel value="#{item.nameEndElipse}"/>
+                <p:commandButton icon="ico_look" title="#{bundle.Open}"
+                                 style="float: right;"
+                                actionListener="#{monitorBean.setCurrentItem(item)}"
+                                oncomplete="document.getElementById('mainFRM:btnOpenItem').click();"/>
             </p:column>
 
             <p:column headerText="#{bundle.Term}" width="80" sortBy="#{item.planExecDate}">
