--- a/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
@@ -97,7 +97,7 @@
                         </f:facet>
                     </p:toolbar> 
 
-                    <p:messages id="messages" showDetail="false" closable="true" styleClass="ui-grid-col-12 without-spaces">
+                    <p:messages showDetail="false" closable="true" styleClass="ui-grid-col-12 without-spaces">
                         <p:autoUpdate />
                     </p:messages>
 
@@ -127,5 +127,5 @@
         <ui:include src="/view/sys/noSaveDlg.xhtml" />
 
     </ui:define>
-
+    
 </ui:composition>
