--- a/escom-bpm-web/src/main/webapp/resources/css/processes.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/processes.css
@@ -13,12 +13,12 @@
 .ui-diagram-task {
     background-color: #9ed4ef;
     width: 12em;
-    height: 5em;
+    height: 6em;
 }
 
 .ui-diagram-subprocess {
-    width:14em;
-    height:7em;
+    width:12em;
+    height:6em;
     border-radius: 16px !important;
     background-color: wheat;
     color: #000000 !important;
@@ -62,8 +62,7 @@
 .ui-diagram-start {
     width:3em;
     height:3em;
-    border-radius: 4em;
-    background-color: #edef04;
+    background-color: cornflowerblue;
 }
 
 .ui-diagram-timer {
@@ -91,36 +90,39 @@
     background-color: blue;    
 }
 
-.ui-diagram-exit {
-    width:3em;
-    height:3em;
-    border-radius: 3em;
-    background-color: #000000;
-}
-
-.ui-diagram-finish {
-    width:3em;
-    height:3em;
-    border-radius: 0em;
-    background-color: #000000;
-}
-
 .ui-diagram-success-state {
     width:9em;
     height:5em;
     background-color: #02b044;
 }
-
 .ui-diagram-fail-state {
     width:9em;
     height:5em;
     background-color: #C33730;
 }
-
 .ui-diagram-completed-state {
-    width:9em;
-    height:5em;
+    width:3em;
+    height:3em;
     background-color: darkgray;
+}
+
+.ui-diagram-success-exit {
+    width:3em;
+    height:3em;
+    border-radius: 3em;
+    background-color: #02b044;
+}
+.ui-diagram-fail-exit {
+    width:3em;
+    height:3em;
+    border-radius: 3em;
+    background-color: #C33730;
+}
+.ui-diagram-completed-exit {
+    width:3em;
+    height:3em;
+    border-radius: 3em;
+    background-color: #000000;
 }
 
 .ui-diagram-condition {
